Bug 278878: Send preference parsing errors to browser console. r=bsmedberg

MozReview-Commit-ID: 61mi71dZbO8

--HG--
extra : rebase_source : 87e32940aa557acd809ba0753fda08caf70ed0f9